h/static/styles/app.scss
@import 'compass';

$base-font-size: 12px;
$base-line-height: 20px;

@import 'reset';
@import 'common';


body {
  @extend .noise;
  font-family: $sans-font-family;
  font-weight: 300;
  margin-top: 30px;
  padding: .72rem;

  @include respond-to(tablets desktops) {
    padding-bottom: 4rem;
  }
}

#{nest("hgroup", "#{headings()}")} {
  margin: 0;
}

svg { -webkit-tap-highlight-color: rgba(255, 255, 255, 0); }

ol {
  list-style-type: decimal;
  padding-left: 3em;
}

.content {
  margin-left: auto;
  margin-right: auto;

  @include respond-to(tablets desktops) {
    margin: auto;
    max-width: $break-tablet;
    padding-left: 4rem;
    padding-right: 4rem;
  }
}


.sheet {
  border: solid 1px $gray-lighter;
  border-radius: 2px;
  font-family: $sans-font-family;
  font-weight: 300;
  margin-bottom: .72em;
  padding: 1em;
  position: relative;
  background-color: $body-background;

  .nav-tabs {
    border: 1px none $gray-lighter;
    border-bottom-style: solid;
    padding: 0 0 1.1em;
    li a { padding-bottom: .231em }
  }

  .close {
    position: absolute;
    right: 1em;
    top: 1em;
  }
}


.user {
  font-weight: bold;
  font-size: 1.1em;
  &:hover {
    color: $link-color-hover;
    cursor: pointer;
    text-decoration: underline;
  }
}


/* The groups dropdown list. */

.group-list {
  margin-right: 0.5em;
}

$group-list-width: 225px;

.group-list .dropdown-menu {
  width: $group-list-width;
}

.group-list .dropdown-menu .group-name {
  max-width: $group-list-width - 45px;
  overflow: hidden;
  text-overflow: ellipsis;
}

.user-picker {
  .avatar {
    border-radius: 2px;
  }

  .dropdown-toggle {
    .provider {
      color: $gray-light;
      display: none;
    }
    &:hover {
      .provider {
        display: inline;
      }
    }
  }

  .dropdown.open .provider {
    display: inline;
  }
}

